--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,8 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
           server-dir: files/Morea/
+
+      - name: 🔨 Build Project
+      run: |
+        source files/Morea/env/bin/activate
+        python3 manage.py migrate
